tests/baselines/reference/tsxAttributeResolution7.errors.txt
tests/cases/conformance/jsx/file.tsx(9,8): error TS2322: Type 'number' is not assignable to type 'string'.


==== tests/cases/conformance/jsx/file.tsx (1 errors) ====
    declare module JSX {
    	interface Element { }
    	interface IntrinsicElements {
    		test1: { "data-foo"?: string };
    	}
    }
    
    // Error
    <test1 data-foo={32} />;
           ~~~~~~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    
    // OK
    <test1 data-foo={'32'} />;
    <test1 data-bar={'32'} />;
    <test1 data-bar={32} />;
    